# dwin_hmi_py

./: LICENSE  README.md  pyproject.toml  setup.py
src/dwin_hmi_py/: __init__.py  hmi.py
tests/: example.py  test_hmi.py  test_hmi_usage.py
